# slidegenie-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_COORDINATION.md  AUTH_IMPLEMENTATION_PLAN.md  Dockerfile  IMPLEMENTATION_ANALYSIS.md  INTELLIGENCE_IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SLIDE_INTEGRATION_SUMMARY.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_seed_academic_templates.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: academic.py  auth.py  document_upload.py  export.py  generation.py  health.py  oauth.py  presentations.py  slides.py  templates.py  users.py  websocket.py
app/core/: config.py  dependencies.py  errors.py  exceptions.py  logging.py  security.py
app/domain/interfaces/: academic_services.py  ai_services.py  base.py  file_services.py  job_services.py  presentation_services.py  search_analytics_services.py
app/domain/schemas/: __init__.py  auth.py  document_processing.py  generation.py  presentation.py  user.py
app/infrastructure/cache/: __init__.py  redis.py
app/infrastructure/database/: base.py  models.py  utils.py
app/repositories/: base.py  generation_job.py  presentation.py  reference.py  slide.py  template.py  unit_of_work.py  user.py
app/services/: auth.py  user.py
app/services/ai/: __init__.py  anthropic_provider.py  base.py  content_processor.py  cost_optimizer.py  generation_pipeline.py  openai_provider.py  prompt_manager.py
app/services/auth/: academic_validator.py  auth_service.py  email_service.py  password_service.py  token_service.py
app/services/document_processing/: ASYNC_PROCESSING_README.md  DOCX_IMPLEMENTATION_SUMMARY.md  README.md  README_DOCX.md  README_LaTeX.md  __init__.py  async_processor.py  base.py  example_docx_usage.py  example_usage.py  test_docx_processor.py  test_latex_processor.py  test_pdf_processor.py
app/services/export/: README.md  README_ExportCoordinator.md  __init__.py  config_manager.py  example_usage.py  export_coordinator.py  export_service.py  test_export_coordinator.py
app/services/security/: __init__.py  audit.py  integration_example.py  lockout.py  middleware.py  rate_limiter.py
app/services/slides/: README.md  __init__.py  config.py  extensions.py  interfaces.py  service.py
docs/: ai-service.md  authentication.md
docs/api/: auth.md
migrations/: 002_add_oauth_support.sql  002_add_oauth_support_rollback.sql
scripts/: init-db.sql
tests/: test_ai_services.py  test_auth_endpoints.py  test_rules_engine.py  test_security_features.py  test_slide_generators.py  test_slide_layouts.py  test_slide_orchestrator.py  test_slide_quality.py  test_slide_rules.py  test_slide_service_integration.py  test_slides_api_integration.py
tests/auth/: test_auth_service.py  test_oauth.py  test_rbac.py  test_security.py  test_token_service.py
tests/fixtures/: auth.py
tests/mocks/: __init__.py  oauth_providers.py
(+128 files in other folders)
